# ChiefOnboarding

./: .ci_env  .dockerignore  .example_env  .flake8  .gitignore  404.html  AI_ASSISTANT_FINAL_SUMMARY.md  AI_ASSISTANT_README.md  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  Dockerfile.web  LICENSE.md  Pipfile  Procfile  README.md  SECURITY.md  app.json  docker-compose.production.yml  docker-compose.yml  docker.sh  heroku.yml  index.html  makefile  package.json  prod.env.example  pyproject.toml  render.yaml  requirements.txt  robots.txt  runtime.txt  scalingo.json  server_script.sh  ssl_renew.sh
back/: .coveragerc  .gitignore  Dockerfile  Dockerfile-dev  Dockerfile.prod  Pipfile  conftest.py  manage.py  pyproject.toml  pytest.ini  requirements-pdf.txt  requirements.txt  supervisord-dev.conf  supervisord.conf
back/admin_tasks/: apps.py  emails.py  models.py  serializers.py  urls.py  views.py
back/ai_assistant/: agent.py  urls.py  views.py
back/api/: ai_views.py  pdf_views.py  permissions.py  serializers.py  tests.py  urls.py  views.py
back/appointments/: apps.py  models.py  serializers.py  urls.py  views.py
back/back/: .env.example  __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
back/badges/: apps.py  models.py  serializers.py  urls.py  views.py
back/fixtures/: admin_onboarding.json  admin_task.json  admin_task_comment.json  all.json  badge.json  category.json  condition.json  content.json  external_messages.json  init_testing.py  introduction.json  preboarding.json  preboarding_user.json  sequence.json  tag.json  (+4 more)
(+1318 files in other folders)
